# comic-dl-tauri

./: README.md  about.html  add.html  index2.html  package-lock.json  package.json  setting.html  tsconfig.json  vite.config.ts
src/: About.vue  Add.vue  App.vue  App2.vue  Setting.vue  about.ts  add.ts  main2.ts  setting.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: antbyw.rs  db.rs  dl_type.rs  lib.rs  log_init.rs  main.rs  mangadex.rs  models.rs  queue_rwlock.rs  schema.rs  utils.rs
src/assets/: reset.css
