[package]
name = "comic-dl-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "comic_dl_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-utils = "2.1.1"
indicatif = "0.17.9"
reqwest = { version = "0.12.9", features = ["blocking"] }
scraper = "0.21.0"
tokio = { version = "1.41.1", features = ["full"] }
url = "2.5.3"
image = "0.25.5"
colored = "2.1.0"
anyhow = "1.0.93"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
bytes = "1.9.0"
serde_urlencoded = "0.7.1"
futures = "0.3"
home = "0.5.11"
log = "0.4.25"
log4rs = "1.3.0"
chrono = "0.4.39"
libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }
diesel = { version = "2.2.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }

